--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=PT+Serif:wght@400;700&display=swap');
 
+@layer utilities{
+    .TextAlignLast{
+        text-align-last: justify;
+    }
+}
+
 body {
     font-family: 'Noto Sans';
 }
